robotshop-application/templates/ingress.yml
# RobotShop Web Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robotshop-web
  namespace: app-space
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-nginx/custom-headers"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mubashir.site
      secretName: mubashir-site-tls
  rules:
    - host: mubashir.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-canary
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mubashir.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-2
            port:
              number: 8080
